@@ -23,7 +23,6 @@ check_PROGRAMS = \
 	integration_test \
 	interleaver_test \
 	inv_test \
-	limits_test \
 	llr_test \
 	ls_solve_test \
 	lu_test \
@@ -73,7 +72,6 @@ gf2mat_test_SOURCES = gf2mat_test.cpp
 integration_test_SOURCES = integration_test.cpp
 interleaver_test_SOURCES = interleaver_test.cpp
 inv_test_SOURCES = inv_test.cpp
-limits_test_SOURCES = limits_test.cpp
 llr_test_SOURCES = llr_test.cpp
 ls_solve_test_SOURCES = ls_solve_test.cpp
 lu_test_SOURCES = lu_test.cpp
