@@ -1,14 +1,0 @@
-================================
-    Test of Numerical Limits   
-================================
-char = 7bits
-unsigned char = 8bits
-short = 15bits
-unsigned short = 16bits
-int = 31bits
-unsigned int = 32bits
-long int = 31bits
-long = 31bits
-unsigned long = 32bits
-float = 24bits
-double = 53bits
